# aniray

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/aniray/: __init__.py  app.py  index.html
tests/: conftest.py
